fix: complement_class_expression to get the label and id. fix: overflowing of cards

--- a/app/index.scss
+++ b/app/index.scss
@@ -464,6 +464,7 @@ ul li.error-reason {
     }
   }
   .sae-card {
+    overflow: hidden;
     background-color: #FFF;
     &.sae-error {
       background-color: #ebcccc;
